Fix for row header misalignment (#11465)
* Fix for row header misalignment

* Add changelog entry file

* Update css changes scope

* Add test cases for manualRowResize

* Replace e2e test with visual test

--- a/handsontable/src/styles/base/_base.scss
+++ b/handsontable/src/styles/base/_base.scss
@@ -82,12 +82,16 @@
             th {
               border-top-width: 0;
             }
-          }
 
-          &:first-of-type td {
-            height: calc(
-              var(--ht-cell-vertical-padding) * 2 + var(--ht-line-height) + 1px
-            );
+            &:first-of-type {
+              th,
+              td {
+                height: calc(
+                  var(--ht-cell-vertical-padding) * 2 + var(--ht-line-height) +
+                    1px
+                );
+              }
+            }
           }
         }
       }
@@ -161,13 +165,6 @@
           background: transparent;
         }
       }
-    }
-
-    // compensates the top border width of the first row
-    tr:first-of-type td {
-      height: calc(
-        var(--ht-cell-vertical-padding) * 2 + var(--ht-line-height) + 2px
-      );
     }
 
     // Cell
@@ -250,6 +247,16 @@
               color: var(--ht-header-row-active-foreground-color);
               background-color: var(--ht-header-row-active-background-color);
             }
+          }
+        }
+
+        // compensates the top border width of the first row
+        &:first-of-type {
+          th,
+          td {
+            height: calc(
+              var(--ht-cell-vertical-padding) * 2 + var(--ht-line-height) + 2px
+            );
           }
         }
 
